--- a/client/src/index.css
+++ b/client/src/index.css
@@ -40,3 +40,17 @@ select{
   box-shadow: none !important;
   border-color: black !important;
 }
+
+.fa-plus{
+  color: green;
+  margin: 5px;
+}
+
+.fa-minus{
+  color: red !important;
+  margin: 5px;
+}
+
+.fa-trash{
+  color: red !important;
+}
