Completed Login Authentication Part
Co-Authored-By: BinukaRanatunga <120770401+BinukaRanatunga@users.noreply.github.com>
Co-Authored-By: kiiigaaa <120770077+kiiigaaa@users.noreply.github.com>
Co-Authored-By: Sadeesha Ashan <120770131+Sadeeshaashan@users.noreply.github.com>
Co-Authored-By: Dinithi Mendis <120770117+dinithi27@users.noreply.github.com>

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -36,25 +36,35 @@ h1 {
   color: white !important;
 }
 
-select{
+select {
   box-shadow: none !important;
   border-color: black !important;
 }
 
-.fa-plus{
+.fa-plus {
   color: green;
   margin: 5px;
 }
 
-.fa-minus{
+.fa-minus {
   color: red !important;
   margin: 5px;
 }
 
-.fa-trash{
+.fa-trash {
   color: red !important;
 }
-input{
+
+input {
   margin-top: 10px !important;
   box-shadow: none !important;
+}
+
+.dropdown-toggle {
+  text-decoration: none;
+}
+
+.text-start {
+
+  text-decoration: none;
 }
