Created Notification Management

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -25,6 +25,10 @@ code {
 .nav-link {
   color: white !important;
 }
+.navbar-toggler{
+  color: white !important;
+}
+
 
 .nav-brand {
   color: rgb(197, 71, 71) !important;
@@ -88,4 +92,16 @@ input {
   backdrop-filter: blur(8px);
   -webkit-backdrop-filter: blur(8px);
   border: 1px solid rgba(255, 255, 255, 0.3);
+}
+.kNUuTe{
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  border-top-left-radius: 25px;
+  border-top-right-radius: 25px;
+  /* background-color: rgba(255, 255, 255, 0.23) !important */
+}
+.gKbhqU{
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  /* background-color: rgba(255, 255, 255, 0.23) !important; */
+  border-bottom-left-radius: 25px;
+  border-bottom-right-radius: 25px;
 }
