--- a/client/src/index.css
+++ b/client/src/index.css
@@ -96,14 +96,14 @@ input {
   border: 1px solid rgba(255, 255, 255, 0.3);
 }
 
-.kNUuTe {
+.dPtfaF {
   box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
   border-top-left-radius: 25px;
   border-top-right-radius: 25px;
   /* background-color: rgba(255, 255, 255, 0.23) !important */
 }
 
-.gKbhqU {
+.gvSceB {
   box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
   /* background-color: rgba(255, 255, 255, 0.23) !important; */
   border-bottom-left-radius: 25px;
