--- a/client/src/index.css
+++ b/client/src/index.css
@@ -326,6 +326,10 @@ body {
   --bs-dropdown-link-active-bg: red !important;
   --bs-dropdown-min-width: 14rem !important;
 }
+.img-jmbo{
+background-image: url('https://mysliit-my.sharepoint.com/personal/it21304460_my_sliit_lk/_layouts/15/embed.aspx?UniqueId=53e96166-59bf-4fce-a866-1b37b9f11af9');
+background-size: 100%,100%;
+}
 
 
 
