--- a/client/src/index.css
+++ b/client/src/index.css
@@ -327,7 +327,7 @@ body {
   --bs-dropdown-min-width: 14rem !important;
 }
 .img-jmbo{
-background-image: url('https://mysliit-my.sharepoint.com/personal/it21304460_my_sliit_lk/_layouts/15/embed.aspx?UniqueId=53e96166-59bf-4fce-a866-1b37b9f11af9');
+background-image: url('https://raw.githubusercontent.com/ImeshPasinda/HungryMeals/main/client/public/NewsBG.jpg?token=GHSAT0AAAAAAB7SQN2EW47SR4UDU4S2NM7OZAXEWGA');
 background-size: 100%,100%;
 }
 
