--- a/client/src/index.css
+++ b/client/src/index.css
@@ -327,7 +327,7 @@ body {
   --bs-dropdown-min-width: 14rem !important;
 }
 .img-jmbo{
-background-image: url('https://github.com/ImeshPasinda/HungryMeals/blob/main/client/public/NewsBG.png');
+background-image: url('https://raw.githubusercontent.com/ImeshPasinda/HungryMeals/main/client/public/NewsBG.png.jpg?token=GHSAT0AAAAAAB7SQN2FWOG5EYMGRTXKKXGKZAXFHDA');
 background-size: 100%,100%;
 }
 
