--- a/client/src/index.css
+++ b/client/src/index.css
@@ -378,7 +378,8 @@ p10 {
 
        .search{
        position: relative;
-       box-shadow: 0 0 40px rgba(51, 51, 51, .1);
+       box-shadow: 0 0 40px rgba(0, 0, 0, 0.3);
+       border-radius: 50%
          
        }
 
@@ -387,6 +388,7 @@ p10 {
         height: 60px;
         text-indent: 25px;
         border: 2px solid #d6d4d4;
+        
 
 
        }
