Updated & Created Sales Part
Co-Authored-By: Dinithi Mendis <120770117+dinithi27@users.noreply.github.com>
Co-Authored-By: Imesh Pasinda <imeshpasinda@gmail.com>
Co-Authored-By: Darshi Buddhini <120660394+DarshiBuddhini@users.noreply.github.com>

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -455,7 +455,24 @@ p10 {
       
 
 
-
+      .financemanagerfunctions{
+        margin-top: 20px;
+        padding: 20px;
+        background-color:rgb(243, 238, 238) ;
+      }
+      
+      .financemanagerfunctions li{
+        list-style-type:none !important;
+        font-size: 18px;
+        display: inline !important;
+        color: black !important;
+      }
+      
+      .financemanagerfunctions li a{
+        color: black !important;
+        padding: 25px;
+        text-decoration: none;
+      }
 
 
 
